# news_flow

./: .gitignore  README.md  pyproject.toml
src/api/: fastapi_example.py  main.py  tests.py
src/news_flow/: crewai_extensions.py  llm_configs.py  main.py  types.py  utils.py
src/news_flow/crews/: __init__.py  a_discover_crew.py  a_scrape_crew.py  b_critique_crew.py  b_planning_crew.py  c_planning_crew.py  c_research_crew.py  d_counterargs_crew.py  d_research_crew.py  e_counterargs_crew.py  e_writer_crew.py  f_writer_crew.py
src/news_flow/crews/a_discover_crew/: discover_crew.py
src/news_flow/crews/a_discover_crew/config/: tasks.yaml
src/news_flow/crews/a_scrape_crew/: scrape_crew.py
src/news_flow/crews/b0_critique_crew/: critique_crew.py
src/news_flow/crews/b0_critique_crew/config/: tasks.yaml
src/news_flow/crews/b_planning_crew/: planning_crew.py
src/news_flow/crews/b_planning_crew/config/: agents.yaml  tasks.yaml
src/news_flow/crews/c_research_crew/: research_crew.py
src/news_flow/crews/c_research_crew/config/: tasks.yaml
src/news_flow/crews/config/: a_discover_agents.yaml  a_scrape_agents.yaml  a_scrape_tasks.yaml  agents.yaml  b_critique_agents.yaml  d_research_agents.yaml  e_counterargs_agents.yaml  f_writer_agents.yaml  tasks.yaml
src/news_flow/crews/d_counterargs_crew/: counterargs_crew.py
src/news_flow/crews/e_writer_crew/: writer_crew.py
src/news_flow/tools/: __init__.py  openai_websearch.py  tavily.py
src/news_flow/tools/old/: Crawl4AI.py  LLM_web_scraping.py
tests/: api_tests.ipynb  manual_testing.ipynb
(+5 files in other folders)
