[project]
name = "news_flow"
version = "0.1.0"
description = "news_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "fastapi[standard]>=0.115.11",
    "firecrawl-py>=1.15.0",
]

[project.scripts]
kickoff = "news_flow.main:kickoff"
plot = "news_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
